--- a/realworld/package.json
+++ b/realworld/package.json
@@ -2,7 +2,6 @@
   "name": "realworld",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,7 +14,8 @@
     "react-query": "^3.39.2",
     "recoil": "^0.7.4",
     "vite": "^3.0.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "vite-plugin-eslint": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
