--- a/realworld/package.json
+++ b/realworld/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^2.0.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "recoil": "^0.7.4",
     "vite": "^3.0.0",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vite-plugin-eslint": "^1.7.0"
+    "vite-plugin-eslint": "^1.7.0",
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
