--- a/realworld/package.json
+++ b/realworld/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
+    "react-router-dom": "6",
     "recoil": "^0.7.4",
     "vite": "^3.0.0",
     "vite-plugin-eslint": "^1.7.0",
