--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Check the source code
 on:
   pull_request:
     branches:
-      - main
+      - dev
 jobs:
   test:
     name: Check the source code
