:fire: react-query 이후 안쓰는 파일 삭제
Co-authored-by: intersoom <sallybig@naver.com>
Co-authored-by: Twince <tjsdn811@gmail.com>

--- a/realworld/package.json
+++ b/realworld/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --config .prettierrc 'src/**/*.{ts,tsx}' --write",
+    "lint": "eslint --ext .tsx --ext .ts src/"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^2.0.0",
